<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily"
            android:checkable="true"
            android:title="@string/nav_daily"
            android:icon="@drawable/ic_nav_daily_black_24dp"/>
        <item
            android:id="@+id/nav_type"
            android:checkable="true"
            android:title="@string/nav_type"
            android:icon="@drawable/ic_nav_type_black_24dp"/>
        <item
            android:id="@+id/nav_collection"
            android:checkable="true"
            android:title="@string/nav_collection"
            android:icon="@drawable/ic_nav_collection_black_24dp"/>
        <item
            android:id="@+id/nav_setting"
            android:checkable="true"
            android:title="@string/nav_setting"
            android:icon="@drawable/ic_nav_setting_black_24dp"/>
    </group>
</menu>