<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?actionBarTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="?actionBarPopupTheme"
            app:title="@string/nav_setting"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?widgetBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/item_open_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_normal"
                android:background="?selectableWidgetBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_url"
                        android:textColor="?textColorSecondary"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_summery_open_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?textColorTertiary"
                        android:textSize="14sp"/>

                </LinearLayout>

            </FrameLayout>

            <View style="@style/AppWidget.DeepLine"/>

            <FrameLayout
                android:id="@+id/item_data_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_normal"
                android:background="?selectableWidgetBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_source"
                        android:textColor="?textColorSecondary"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_summery_data_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?textColorTertiary"
                        android:textSize="14sp"/>

                </LinearLayout>

            </FrameLayout>

            <View style="@style/AppWidget.DeepLine"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>